--- a/assets/css/Css pink.css
+++ b/assets/css/Css pink.css
@@ -8,11 +8,14 @@
     border-right: 4px solid #ec1839;
 }
 
+
 .aside .nav li a:hover,
 .aside .nav li a.active{
     color: #ec1839;
 }
 
+.about .about-content .skills .skill-item .progress .progress-in,
+.btn,
 .aside .nav-toggle span,
 .aside .nav-toggle span::before,
 .aside .nav-toggle span::after,
