--- a/assets/css/css_color.css
+++ b/assets/css/css_color.css
@@ -31,12 +31,69 @@ body{
     padding:0 30px;
 }
 
+.section .container{
+    padding-top:60px;
+    padding-bottom: 70px;
+}
+
+.section-title{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100% ;
+    margin-bottom: 60px;
+
+}
+
+.section-title h2{
+    font-size: 40px;
+    color: #302e4d;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 700;
+    margin: 0;
+    position: relative;
+}
+
+.section-title h2::before{
+    content: '';
+    height: 4px;
+    width: 50px;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #ec1839;
+}
+
+.section-title h2::after{
+    content: '';
+    height: 4px;
+    width: 25px;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    margin-top:8px;
+    background-color: #ec1839;
+}
+
+.row{
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    position: relative;
+}
+
+.padd-15{
+    padding-left: 15px;
+    padding-right: 15px;
+}
 .main-container{
     padding-left: 270px;
 }
 
 .container{
-    max-width: 1100px;
+    max-width: 1000px;
     width: 100%;
     margin:auto;
 }
@@ -45,10 +102,30 @@ body{
     -webkit-box-shadow: 0 0 20px rgba(48,46,77,0.15);
     box-shadow: 0 0 20px rgba(48,46,77,0.15);
 }
+.hidden{
+    display: none!important;
+}
 
+.btn{
+    font-size: 20px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    padding: 12px 35px;
+    color: #ffffff;
+    border-radius: 40px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    display: inline-block;
+    white-space: nowrap;
+}
+
+.btn:hover{
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+}
 /*Aside*/
 .aside{
-    width: 270px;
+    width: 300px;
     background-color: #fdf9ff;
     position: fixed;
     height: 100%;
@@ -64,7 +141,7 @@ body{
 }
 
 .aside .logo a{
-    font-size: 40px;
+    font-size: 50px;
     color: #302e4d;
     font-family: 'Rubik', sans-serif;
     font-weight: 700;
@@ -149,11 +226,11 @@ body{
 }
 
 .aside .nav li a{
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 600;
     color: #302e4d;
     text-decoration: none;
-    line-height: 45px;
+    line-height: 75px;
     display: block;
     border-bottom: 1px solid #e8dfec;
     -webit-transition: all 0.3s ease;
@@ -185,15 +262,15 @@ body{
 }
 
 .home .intro img{
-    height: 200px;
-    width: 200px;
+    height: 400px;
+    width: 400px;
     border-radius: 50%;
     display: inline-block;
     border: 8px solid #ffffff;
 }
 
 .home .intro h1{
-    font-size: 30px;
+    font-size: 55px;
     color: #302e4d;
     font-family: 'Rubik', sans-serif;
     font-weight: 700;
@@ -201,7 +278,7 @@ body{
 }
 
 .home .intro p{
-    font-size: 16px;
+    font-size: 30px;
     font-weight: 500;
     margin: 0;
     line-height: 22px;
@@ -229,4 +306,289 @@ body{
 .home .intro .social-links a:hover{
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
+}
+
+/*About Section*/
+
+.about .about-content{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+.about .about-content .about-text{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.about .about-content .about-text h3{
+    font-size: 40px;
+    margin-bottom: 15px;
+    font-weight: 600;
+    color: #302e4d;
+}
+
+.about .about-content .about-text p{
+    font-size: 25px;
+    line-height: 25px;
+    color: #504e70;
+    margin: 0;
+}
+
+.about .about-content .personal-info{
+    -ms-flex: 0 0 70%;
+    flex: 0 0 70%;
+    max-width: 70%;
+    margin-top: 50px;
+}
+
+.about .about-content .personal-info .info-item {
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.about .about-content .personal-info .info-item p{
+    font-weight: 600;
+    padding:20px 0;
+    font-size: 20px;
+    color: #302e4d;
+    margin: 0;
+    border-bottom: 1px solid #e8dfec;
+
+}
+
+.about .about-content .personal-info .info-item p span{
+    font-weight: 400;
+    color: #504e70;
+    margin-left: 4px;
+    display: inline-block;
+}
+
+.about .about-content .personal-info .buttons{
+    margin-top: 40px;
+
+}
+
+.about .about-content .personal-info .buttons .btn{
+    margin-right: 25px;
+    margin-top: 20px;
+
+}
+
+.about .about-content .skills{
+    -ms-flex: 0 0 30%;
+    flex: 0 0 30%;
+    max-width: 30%;
+    margin-top: 60px;
+}
+
+.about .about-content .skills .skill-item{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+
+}
+
+.about .about-content .skills .skill-item h5{
+    line-height: 40px;
+    font-weight: 600;
+    font-size: 20px;
+    color: #302e4d;
+    text-transform: capitalize;
+    margin: 0;
+}
+
+.about .about-content .skills .skill-item .progress{
+    background-color: #e3e3e3;
+    height: 7px;
+    border-radius: 4px;
+    /*overflow: hidden;*/
+    width: 100%;
+    position: relative;
+}
+
+.about .about-content .skills .skill-item{
+    margin-bottom: 40px;
+}
+
+.about .about-content .skills .skill-item .progress .progress-in{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    border-radius: 4px;
+}
+
+.about .about-content .skills .skill-item .skills-percent{
+    line-height: 40px;
+    position: absolute;
+    right: 0;
+    color: #302e4d;
+    top: -40px;
+    font-weight: 400;
+}
+
+.about .about-content .education{
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-top:80px;
+}
+
+.about .about-content .experience{
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-top:80px;
+}
+
+.about .about-content h3 .title{
+    font-size: 40px;
+    margin-bottom: 30px;
+    font-weight: 600;
+    color: #302e4d;
+}
+
+.about .about-content .timeline-box{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.about .about-content .timeline{
+    background-color: #fdf9ff;
+    padding: 30px 15px;
+    border: 1px solid #d4d4e3;
+    border-radius: 10px;
+    width: 100%;
+    position: relative;
+}
+
+.about .about-content .timeline .timeline-item{
+    position: relative;
+    padding-left: 37px;
+    padding-bottom: 85px;
+}
+
+.about .about-content .timeline .timeline-item:last-child{
+    padding-bottom: 0px;
+}
+
+.about .about-content .timeline .timeline-item::before{
+    content: '';
+    width: 1px;
+    position: absolute;
+    height: 100%;
+    left: 7px;
+    background-color: #ec1839;
+    top: 0;
+}
+
+.about .about-content .timeline .circle-dot{
+    position: absolute;
+    left: 0;
+    top: 0px;
+    height: 15px;
+    width: 15px;
+    background-color: #ec1839;
+    left: 0px;
+    border-radius: 50%;
+}
+
+.about .about-content .timeline .timeline-date{
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: -5px;
+    margin-bottom: 12px;
+    color: #504e70;
+}
+
+.about .about-content .timeline .timeline-date .fa{
+    margin-right: 5px;
+}
+.about .about-content .timeline .timeline-title{
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+    color: #302e4d;
+}
+
+.about .about-content .timeline .timeline-text{
+    font-size: 25px;
+    line-height: 25px;
+    color: #504e70;
+    margin: 0;
+
+}
+
+/*Assigment section*/
+
+.assigment .container{
+    padding-bottom:40px;
+}
+
+.assigment .assigment-item{
+    -ms-flex:  0 0 33.33%;
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+    margin-bottom: 30px;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.assigment .assigment-item .assigment-item-inner{
+    background-color: #fdf9ff;
+    border:  1px solid #d4d4e3;
+    border-radius: 10px;
+    padding: 30px 15px;
+    text-align: center;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.assigment .assigment-item .assigment-item-inner:hover{
+    -webkit-box-shadow: 0 0 20px rgba(48,46,77,0.15);
+    box-shadow: 0 0 20px rgba(48,46,77,0.15);
+}
+
+.assigment .assigment-item .assigment-item-inner .icon{
+    height: 60px;
+    width: 60px;
+    display: block;
+    margin: 0 auto 30px;
+    text-align: center;
+    border-radius: 50%;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.assigment .assigment-item .assigment-item-inner .icon .fa{
+    color: #ec1839;
+    font-size: 40px;
+    line-height: 60px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.assigment .assigment-item .assigment-item-inner:hover .icon .fa{
+    background-color: #ec1839;
+    font-size: 25px;
+    color: #ffffff;
+}
+
+.assigment .assigment-item .assigment-item-inner h4{
+    font-size: 20px;
+    margin-bottom: 15px;
+    color: #302e4d;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.assigment .assigment-item .assigment-item-inner p{
+    font-size: 18px;
+    color: #504e70;
+    line-height: 25px;
+    margin: 0;
 }
