--- a/assets/css/css_color.css
+++ b/assets/css/css_color.css
@@ -24,6 +24,10 @@ body{
     box-sizing: border-box;
 }
 
+input,textarea,select{
+    font-family: 'Montserrat', sans-serif;
+}
+
 .section{
     background-color: #f2f2fc;
     min-height: 100vh;
@@ -93,8 +97,7 @@ body{
 }
 
 .container{
-    max-width: 1000px;
-    width: 100%;
+    width: 80%;
     margin:auto;
 }
 
@@ -117,6 +120,9 @@ body{
     transition: all 0.3s ease;
     display: inline-block;
     white-space: nowrap;
+    /*display: none;*/
+    cursor: pointer;
+    background-color: #ec1839;
 }
 
 .btn:hover{
@@ -159,6 +165,8 @@ body{
     position: absolute;
     top: 0;
     left: 0;
+    border-top:4px solid #ec1839;
+    border-left: 4px solid #ec1839;
 }
 
 .aside .logo a::after {
@@ -168,6 +176,8 @@ body{
     position: absolute;
     bottom: 0;
     right : 0;
+    border-bottom:4px solid #ec1839;
+    border-right: 4px solid #ec1839;
 }
 
 .aside .nav-toggle{
@@ -195,6 +205,7 @@ body{
     width: 18px;
     display: inline-block;
     position: relative;
+    background-color: #ec1839;
 }
 
 .aside .nav-toggle span::before {
@@ -204,6 +215,7 @@ body{
     position: absolute;
     top: -6px;
     left: 0;
+    background-color: #ec1839;
 }
 
 .aside .nav-toggle span::after {
@@ -213,6 +225,7 @@ body{
     position: absolute;
     top: 6px;
     left: 0;
+    background-color: #ec1839;
 }
 
 .aside .nav{
@@ -241,6 +254,10 @@ body{
     padding-left: 5px;
 }
 
+.aside .nav li a:hover,
+.aside .nav li a.active{
+    color: #ec1839;
+}
 .aside .nav li a {
     margin-right: 5px;
 
@@ -301,6 +318,7 @@ body{
     text-decoration: none;
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
+    background-color: #ec1839;
 }
 
 .home .intro .social-links a:hover{
@@ -418,6 +436,7 @@ body{
     top: 0;
     height: 100%;
     border-radius: 4px;
+    background-color: #ec1839;
 }
 
 .about .about-content .skills .skill-item .skills-percent{
@@ -592,3 +611,91 @@ body{
     line-height: 25px;
     margin: 0;
 }
+
+
+/*Contact Section*/
+
+.contact .contact-info-item{
+    -ms-flex: 0 0 33.33;
+    flex: 0 0 33.33;
+    max-width: 33.33%;
+    text-align: center;
+    margin-bottom: 75px;
+}
+
+.contact .contact-info-item .icon{
+    display: inline-block;
+}
+
+.contact .contact-info-item .icon .fa{
+    color: #ec1839;
+    font-size: 40px;
+}
+
+.contact .contact-info-item h4{
+    font-size: 18px;
+    font-weight: 700;
+    color: #302e4d;
+    text-transform: capitalize;
+    margin: 15px 0 5px;
+}
+
+.contact .contact-info-item p{
+    font-size: 16px;
+    line-height: 25px;
+    color: #504e70;
+    margin: 0;
+    font-weight: 400;
+
+}
+
+.contact .contact-form{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.contact .contact-form .col-6{
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.contact .contact-form .col-12{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.contact .contact-form .form-item{
+    margin-bottom:30px;
+}
+
+.contact .contact-form .form-item .from-control{
+    width: 100%;
+    height: 60px;
+    border-radius: 25px;
+    border: 1px solid #d4d4e3;
+    padding: 10px 25px;
+    font-size: 16px;
+    color: #504e70;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.contact .contact-form .form-item .from-control:focus{
+    -webkit-box-shadow: 0 0 20px rgba(48,46,77,0.15);
+    box-shadow: 0 0 20px rgba(48,46,77,0.15);
+}
+
+.contact .contact-form .form-item textarea .from-control{
+    height: 100px;
+}
+
+.contact .contact-form .btn{
+    height: 65px;
+    padding: 0 50px;
+}
+
+/*Responsive*/
+
