--- a/assets/css/css_color.css
+++ b/assets/css/css_color.css
@@ -92,6 +92,12 @@ input,textarea,select{
     padding-left: 15px;
     padding-right: 15px;
 }
+
+.padd-top{
+    position: relative;
+    top: 50px;
+}
+
 .main-container{
     padding-left: 270px;
 }
@@ -394,60 +400,6 @@ input,textarea,select{
 
 }
 
-.about .about-content .skills{
-    -ms-flex: 0 0 30%;
-    flex: 0 0 30%;
-    max-width: 30%;
-    margin-top: 60px;
-}
-
-.about .about-content .skills .skill-item{
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
-    max-width: 100%;
-
-}
-
-.about .about-content .skills .skill-item h5{
-    line-height: 40px;
-    font-weight: 600;
-    font-size: 20px;
-    color: #302e4d;
-    text-transform: capitalize;
-    margin: 0;
-}
-
-.about .about-content .skills .skill-item .progress{
-    background-color: #e3e3e3;
-    height: 7px;
-    border-radius: 4px;
-    /*overflow: hidden;*/
-    width: 100%;
-    position: relative;
-}
-
-.about .about-content .skills .skill-item{
-    margin-bottom: 40px;
-}
-
-.about .about-content .skills .skill-item .progress .progress-in{
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    border-radius: 4px;
-    background-color: #ec1839;
-}
-
-.about .about-content .skills .skill-item .skills-percent{
-    line-height: 40px;
-    position: absolute;
-    right: 0;
-    color: #302e4d;
-    top: -40px;
-    font-weight: 400;
-}
-
 .about .about-content .education{
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
@@ -477,7 +429,7 @@ input,textarea,select{
 
 .about .about-content .timeline{
     background-color: #fdf9ff;
-    padding: 30px 15px;
+    padding: 90px 15px;
     border: 1px solid #d4d4e3;
     border-radius: 10px;
     width: 100%;
@@ -540,6 +492,167 @@ input,textarea,select{
     color: #504e70;
     margin: 0;
 
+}
+
+/* skill */
+
+.skills .skill-item{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 40px;
+}
+
+/*.skills .skill-item progress{*/
+/*    background-color: #e3e3e3;*/
+/*    height: 7px;*/
+/*    border-radius: 4px;*/
+/*    width: 100%;*/
+/*    position: relative;*/
+/*}*/
+
+.skills .skill-item .progress .bar{
+    background: #ffffff;
+    display: block;
+    height: 1vw;
+    border: 1px solid #ffffff;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 10px  #ec1839;
+    margin: 20px 0;
+}
+
+.skills .skill-item .progress .bar span{
+    height: 1vw;
+    float: left;
+    border-radius: 10px;
+    background: #ec1839 ;
+}
+
+/*.skills .skill-item h5{*/
+/*    line-height: 40px;*/
+/*    font-weight: 600;*/
+/*    font-size: 20px;*/
+/*    color: #302e4d;*/
+/*    text-transform: capitalize;*/
+/*    margin: 0;*/
+/*}*/
+
+/*.skill .skill-item .progress .progress-in{*/
+/*    position: absolute;*/
+/*    left: 0;*/
+/*    top: 0;*/
+/*    height: 100%;*/
+/*    border-radius: 4px;*/
+/*    background-color: #ec1839;*/
+/*}*/
+
+/*.skill .skill-item .skills-percent{*/
+/*    line-height: 40px;*/
+/*    position: absolute;*/
+/*    right: 0;*/
+/*    color: #302e4d;*/
+/*    top: -40px;*/
+/*    font-weight: 400;*/
+/*}*/
+
+.java{
+    width: 90%;
+    animation: java 2s;
+}
+
+.javascript{
+    width: 75%;
+    animation: javascript 2s;
+}
+
+.html{
+    width: 85%;
+    animation: html 2s;
+}
+
+.css{
+    width: 75%;
+    animation: css 2s;
+}
+
+.boostrap{
+    width: 90%;
+    animation: boostrap 2s;
+}
+
+.mysql{
+    width: 50%;
+    animation: mysql 2s;
+}
+
+.git{
+    width: 65%;
+    animation: git 2s;
+}
+
+
+@keyframes java {
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 90%;
+    }
+}
+
+@keyframes javascript {
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 75%;
+    }
+}
+
+@keyframes html {
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 85%;
+    }
+}
+
+@keyframes css {
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 75%;
+    }
+}
+
+@keyframes boostrap {
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 90%;
+    }
+}
+
+@keyframes mysql {
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 50%;
+    }
+}
+
+@keyframes git {
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 65%;
+    }
 }
 
 /*Assigment section*/
@@ -621,6 +734,7 @@ input,textarea,select{
     max-width: 33.33%;
     text-align: center;
     margin-bottom: 75px;
+    flex: auto;
 }
 
 .contact .contact-info-item .icon{
