--- a/assets/css/css_color.css
+++ b/assets/css/css_color.css
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500;700;900&display=swap');
+
 body{
     margin: 0;
     line-height: 1.5;
@@ -33,6 +34,49 @@ input,textarea,select{
     min-height: 100vh;
     display: block;
     padding:0 30px;
+    position: fixed;
+    left: 270px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    opacity: 1;
+    -webkit-transition:all 0.3s ease;
+    transition:all 0.3s ease;
+}
+
+.section.back-section{
+    z-index: 1;
+}
+
+.section.active{
+    opacity: 1;
+    z-index: 2;
+    -webkit-animation: slideSection 1s ease;
+    animation: slideSection 1s ease;
+}
+
+@-webkit-keyframes slideSection {
+    0%{
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%);
+    }
+    100%{
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);
+    }
+}
+
+@keyframes slideSection {
+    0%{
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%);
+    }
+    100%{
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);
+    }
 }
 
 .section .container{
@@ -56,6 +100,7 @@ input,textarea,select{
     margin: 0;
     position: relative;
 }
+
 
 .section-title h2::before{
     content: '';
@@ -98,10 +143,6 @@ input,textarea,select{
     top: 50px;
 }
 
-.main-container{
-    padding-left: 270px;
-}
-
 .container{
     width: 80%;
     margin:auto;
@@ -135,7 +176,9 @@ input,textarea,select{
     -webkit-transform: scale(1.05);
     transform: scale(1.05);
 }
+
 /*Aside*/
+
 .aside{
     width: 300px;
     background-color: #fdf9ff;
@@ -146,6 +189,8 @@ input,textarea,select{
     z-index: 10;
     border-right: 1px solid #e8dfec;
     padding: 30px;
+    -webkit-transition:all 0.3s ease;
+    transition:all 0.3s ease;
 }
 
 .aside .logo{
@@ -186,6 +231,14 @@ input,textarea,select{
     border-right: 4px solid #ec1839;
 }
 
+body.dark .aside .logo a::before{
+    border-top:4px solid #2196f3;
+    border-left: 4px solid #2196f3;
+}
+body.dark .aside .logo a::after{
+    border-bottom:4px solid #2196f3;
+    border-right: 4px solid #2196f3;
+}
 .aside .nav-toggle{
     height: 40px;
     width: 45px;
@@ -197,13 +250,13 @@ input,textarea,select{
     z-index: 11;
     border-radius: 5px;
     background-color: #fdf9ff;
-    /*display: -ms-flexbox;*/
-    /*display: flex;*/
     display: none;
     -ms-flex-align: center;
     align-items: center;
     -ms-flex-pack: center;
     justify-content: center;
+    -webkit-transition:all 0.3s ease;
+    transition:all 0.3s ease;
 }
 
 .aside .nav-toggle span{
@@ -240,6 +293,8 @@ input,textarea,select{
     padding: 0;
 }
 
+
+
 .aside .nav li{
     display: block;
 }
@@ -263,6 +318,11 @@ input,textarea,select{
 .aside .nav li a:hover,
 .aside .nav li a.active{
     color: #ec1839;
+}
+
+body.dark .aside .nav li a:hover,
+body.dark .aside .nav li a.active{
+    color: #2196f3;
 }
 .aside .nav li a {
     margin-right: 5px;
@@ -483,6 +543,7 @@ input,textarea,select{
     color: #504e70;
 }
 
+
 .about .about-content .timeline .timeline-date .fa{
     margin-right: 5px;
 }
@@ -530,11 +591,20 @@ input,textarea,select{
     margin: 20px 0;
 }
 
+body.dark .skills .skill-item .progress .bar{
+    box-shadow: 0 0 10px  #2196f3;
+}
+
+
 .skills .skill-item .progress .bar span{
     height: 1vw;
     float: left;
     border-radius: 10px;
     background: #ec1839 ;
+}
+
+body.dark .skills .skill-item .progress .bar span{
+    background: #2196f3;
 }
 
 /*.skills .skill-item h5{*/
@@ -712,6 +782,11 @@ input,textarea,select{
     transition: all 0.3s ease;
 }
 
+
+body.dark .assigment .assigment-item .assigment-item-inner .icon .fa{
+    color: #2196f3;
+}
+
 .assigment .assigment-item .assigment-item-inner:hover .icon .fa{
     background-color: #ec1839;
     font-size: 25px;
@@ -733,6 +808,18 @@ input,textarea,select{
     margin: 0;
 }
 
+body.dark .section-title h2::before,
+body.dark .section-title h2::after,
+body.dark .btn,
+body.dark .aside .nav-toggle span,
+body.dark .aside .nav-toggle span::before,
+body.dark .aside .nav-toggle span::after,
+body.dark .home .intro .social-links a,
+body.dark .about .about-content .timeline .timeline-item::before,
+body.dark .about .about-content .timeline .circle-dot,
+body.dark .assigment .assigment-item .assigment-item-inner:hover .icon .fa{
+    background-color: #2196f3;
+}
 
 /*Contact Section*/
 
@@ -752,6 +839,11 @@ input,textarea,select{
 .contact .contact-info-item .icon .fa{
     color: #ec1839;
     font-size: 40px;
+}
+
+
+body.dark .contact .contact-info-item .icon .fa{
+    color: #2196f3;
 }
 
 .contact .contact-info-item h4{
@@ -819,15 +911,88 @@ input,textarea,select{
     padding: 0 50px;
 }
 
+
+body.dark .section{
+    background-color: #151515;
+}
+
+body.dark .contact .contact-form .form-item .from-control,
+body.dark .assigment .assigment-item .assigment-item-inner,
+body.dark .about .about-content .timeline,
+body.dark .aside{
+    background-color: #222222;
+}
+
+body.dark .assigment .assigment-item .assigment-item-inner h4,
+body.dark .about .about-content .timeline .timeline-title,
+body.dark .about .about-content h3.title,
+body.dark .contact .contact-info-item h4,
+body.dark h5,
+body.dark .about .about-content .personal-info .info-item p,
+body.dark .about .about-content .about-text h3,
+body.dark .section-title h2,
+body.dark .home .intro h1,
+body.dark .aside .logo a,
+body.dark .aside .nav li a{
+    color: #ffffff;
+}
+
+body.dark .contact .contact-form .form-item .from-control,
+body.dark .assigment .assigment-item .assigment-item-inner p,
+body.dark .about .about-content .timeline .timeline-text,
+body.dark .about .about-content .timeline .timeline-date,
+body.dark .contact .contact-info-item p,
+body.dark .about .about-content .personal-info .info-item p span,
+body.dark .about .about-content .about-text p,
+body.dark .home .intro p{
+    color: #e9e9e9;
+}
+
+body.dark .aside,
+body.dark .contact .contact-form .form-item .from-control,
+body.dark .assigment .assigment-item .assigment-item-inner,
+body.dark .about .about-content .timeline,
+body.dark .about .about-content .personal-info .info-item p,
+body.dark .aside .nav li a{
+    border-color: #393939;
+}
+
+body.dark .aside .nav li a.active{
+    color: #2196f3;
+}
+
+body.dark .aside .nav li a:hover{
+    color: #2196f3;
+}
+
+body.dark .shadow-dark{
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
 /*Responsive*/
 
 @media (max-width: 1199px) {
-    /*.aside{*/
-    /*    left: -270px;*/
-    /*}*/
-    /*.main-container{*/
-    /*    padding-left:0 ;*/
-    /*}*/
+    .aside .nav-toggle{
+        display: -ms-flex;
+        display: flex;
+        left: 30px ;
+    }
+
+    .aside .nav-toggle.open{
+        left:300px ;
+    }
+    .aside{
+        left: -270px;
+    }
+
+    .aside.open{
+        left: 0px;
+    }
+
+    .section{
+
+    left: 0}
+
     .about .about-content .personal-info .info-item p span {
         display: block;
         margin-left: 0;
@@ -855,5 +1020,59 @@ input,textarea,select{
         flex: 0 0 100%;
         max-width: 100%;
     }
+}
+
+
+.style-switcher{
+    position: fixed;
+    top: 20px;
+    right: 0;
+    z-index: 10;
+    background-color: #ffffff;
+    padding: 15px;
+    border: 1px solid #d4d4e3;
+    border-right: none;
+    border-radius: 0 0 0 5px;
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+
+.style-switcher.open{
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+}
+
+
+.style-switcher h5{
+    font-size: 16px;
+    color: #302e4d;
+    margin-top: 0;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #e8dfec;
+}
+
+
+.style-switcher .toggle-style-switcher{
+    position: absolute;
+    height: 45px;
+    width: 45px;
+    background: #ffffff;
+    left: -46px;
+    top: -1px;
+    border: 1px solid #d4d4e3;
+    border-right: none ;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 5px 0 0 5px;
+
+}
+
+.style-switcher .toggle-style-switcher .fa{
+    font-size: 20px;
+    line-height: 43px;
 }
 
